# sneppx-alg

./: .cmake-format.yaml  .codecov.yml  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cpu  Docs.md  Doxyfile  GOVERNANCE.md  INSTALL  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  PROGRESS_TENSOR.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE_PLAN.md  SUPPORT.md  VERSION  cSpell.json  cliff.toml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  (+2 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  (+1 more)
algorithms/model_zoo/: CMakeLists.txt  model_card.c
algorithms/model_zoo/tests/: simple_test.c  test_model_card.c
bindings/python/: CMakeLists.txt  bindings.cpp  setup.py
bindings/python/SneppX_ALG/: __init__.py
bindings/python/SneppX_ALG/interface_bindings/: __init__.py  advanced_ops.py  algo_arc.py  algo_fm.py  algo_npe.py  amp.py  audit_logger.py  autograd_ops.py  benchmarking.py  checkpoint_manager.py  container_security.py  cuda_kernels.py  data.py  data_loader.py  ddos_mitigation.py  differential_privacy.py  distributed.py  distributed_wrapper.py  experiment_cli.py  firewall.py  firewall_application.py  firewall_network.py  firewall_transport.py  grad_checkpoint.py  graph_compiler.py  hf_integration.py  hparams.py  inference_server.py  llama_models.py  model.py  model_implementations.py  model_zoo.py  nccl.py  nn.py  optim.py  optim_advanced.py  optim_extra.py  quantization.py  s5_safety.py  schedulers.py  (+9 more)
bindings/python/arix_algo/: __init__.py
bindings/python/interface_bindings/: __init__.py  model.py  tensor.py  train.py
examples/: CMakeLists.txt  arc_demo.c  fm_demo.c  hss_demo.c  npe_demo.c  obf_demo.cpp  security_stress.c  ser_demo.c
examples/advanced/: README.md
kernel/cuda/: CMakeLists.txt  attention_cuda.cu  attention_cuda.h  autodiff_cuda.cu  autodiff_cuda.h  common.cuh  memory_cuda.cu  memory_cuda.h  optim_cuda.cu  optim_cuda.h  rng_cuda.cu  tensor_cuda.cu  tensor_cuda.h
lib/rust/: Cargo.toml
lib/rust/src/: lib.rs
net/distributed/: Cargo.toml  nccl.c  nccl.h
src/python/: CMakeLists.txt  bindings.cpp  setup.py
src/python/arix_algo/: __init__.py  model.py  tensor.py  train.py
tests/: CMakeLists.txt  README.md  cuda_test_suite.cu  debug_attn.c  test_common.h
tests/benchmark/: CMakeLists.txt  bench_autodiff.c  bench_common.h  bench_hss.c  bench_npe.c  bench_pq_crypto.c  bench_ser.c  bench_tensor.c
tests/chaos/: test_fault_injection.c
tests/compliance/: test_soc2.c
tests/crypto/post_quantum/: test_kyber_extended.c
tests/crypto/protocols/: test_noise_protocol.c  test_tls_extended.c
tests/fuzz/: CMakeLists.txt  fuzz_tensor.c
tests/incident_response/: test_playbook.c
tests/integration/: test_complete_stack.c  test_full_pipeline.c  test_full_stack.c  test_hss_ser_arc_stack.c  test_hss_ser_stack.c
tests/python/: test_algo_wrappers.py  test_autograd.py  test_checkpoint.py  test_checkpoint_manager.py  test_cuda.py  test_data.py  test_differential_privacy.py  test_distributed.py  test_distributed_wrapper.py  test_experiment_tracker.py  test_firewall_application.py  test_firewall_network.py  test_firewall_transport.py  test_hf_integration.py  test_hparams.py  test_model.py  test_model_zoo.py  test_nccl.py  test_nn.py  test_optim.py  test_profiler.py  test_quantization.py  test_security_middleware.py  test_tensor.py  test_train.py  test_trainer_v2.py  test_ultra_trainer.py  test_watermark.py
tests/quantization/: test_quantize.c
tests/security/: test_aead.c  test_argon2.c  test_aslr.c  test_blake3.c  test_cache.c  test_canary.c  test_chacha20.c  test_container_breakout.c  test_container_security.c  test_ct.c  test_ddos_mitigation.c  test_differential_privacy.c  test_dilithium.c  test_ed25519.c  test_integrity_monitor.c  test_kyber.c  test_lock.c  test_memory_leak.c  test_network_fuzzer.c  test_poly1305.c  test_power.c  test_random.c  test_rlhf_safety.c  test_s4_network.c  test_s5_ai_sanitizer.c  test_s6_ui.c  test_s7_updates.c  test_s8_s9.c  test_sc.c  test_secure_mem.c  test_sha3.c  test_sha512.c  test_sphincsplus.c  test_timing.c
tests/security/cpp/: test_instruction_substitution.cpp  test_obf_anti.cpp  test_obf_cfg.cpp  test_obf_pipeline.cpp  test_obf_string.cpp  test_obf_vm.cpp
tests/threat_intel/: test_analyzer.c
tests/unit/: test_activation.c  test_arch.c  test_attention.c  test_attn_train_convergence.c  test_autodiff.c  test_autodiff_edge.c  test_autodiff_ops.c  test_backend_full.c  test_checkpoint.c  test_cognitive_memory.c  test_compress.c  test_cuda_driver.c  test_data_pipeline.c  test_gradient_check.c  test_hashtable.c  test_inference.c  test_inference_engine.c  test_memory.c  test_multi_module_stack_train.c  test_optimizer.c  test_pqueue.c  test_rbtree.c  test_rocm_driver.c  test_rope.c  test_secure_allocator.c  test_slab_alloc.c  test_strutil.c  test_tensor.c  test_tensor_creation.c  test_tensor_edge.c  test_tensor_io.c  test_tensor_nn.c  test_tensor_nn_ops.c  test_tensor_ops.c  test_tensor_reduction.c  test_tensor_shape.c  test_thread.c  test_tokenizer.c  test_topology.c  test_tpu_driver.c  (+2 more)
tests/unit/arc/: test_arc_attack.c  test_arc_forward.c  test_arc_gradient_obfuscator.c  test_arc_input_guard.c  test_arc_layer.c  test_arc_output_verifier.c
tests/unit/fm/: test_fm_controller.c  test_fm_forward.c  test_fm_memory_bank.c  test_fm_node.c  test_fm_privacy.c  test_fm_sync.c
tests/unit/hss/: test_hss_discretize.c  test_hss_hierarchical.c  test_hss_layer.c  test_hss_model.c  test_hss_parallel_scan.c
tests/unit/npe/: test_npe_compiler.c  test_npe_jit_constant_fold.c  test_npe_jit_pipeline.c  test_npe_program.c  test_npe_train.c  test_npe_verify.c  test_npe_vm.c
tests/unit/ser/: test_ser_expert.c  test_ser_gating.c  test_ser_layer.c  test_ser_loss.c  test_ser_model.c  test_ser_route.c  test_ser_train.c
tests/unit/train/: test_trainer.c  test_trainer_cuda.c
(+561 files in other folders)
