[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sneppx-alg"
version = "0.9.7.890"
description = "Next-generation AI architecture with security built into the foundation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ammar [SNEPPX]", email = "algoSNEPPX@gmail.com"},
]
keywords = ["ai", "machine-learning", "deep-learning", "neural-networks", "security", "post-quantum", "cryptography", "distributed-training", "cuda", "tensor"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/ammar49-cyber/sneppx-alg"
Repository = "https://github.com/ammar49-cyber/sneppx-alg"
Documentation = "https://github.com/ammar49-cyber/sneppx-alg#readme"
"Bug Tracker" = "https://github.com/ammar49-cyber/sneppx-alg/issues"
"Release Notes" = "https://github.com/ammar49-cyber/sneppx-alg/releases"

[project.scripts]
sneppx-train = "SneppX_ALG.interface_bindings.train_cli:main"
sneppx-serve = "SneppX_ALG.interface_bindings.serve_cli:main"
sneppx-experiment = "SneppX_ALG.interface_bindings.experiment_cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy>=1.7"]
hf = ["huggingface_hub>=0.16.0"]
serve = ["uvicorn>=0.22.0"]

[project.dependencies]
numpy = ">=1.21.0"
pyyaml = ">=5.1"

[tool.setuptools.packages.find]
where = ["bindings/python"]

[tool.setuptools.package-data]
SneppX_ALG = [
    "_SNEPPX_c*.pyd", "_SNEPPX_c*.so",
    "_sneppx_c*.pyd", "_sneppx_c*.so",
    "_arix_c*.pyd", "_arix_c*.so",
    "interface_bindings/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
